--- a/simpleinvoices/config/config.ini
+++ b/simpleinvoices/config/config.ini
@@ -26,11 +26,11 @@ export.pdf.bottommargin 			= 15
 local.locale	    				= en_GB
 local.precision		    			= 2
 
-email.host 				            = localhost
-email.smtp_auth			    		= false
-email.username			    		=  
-email.password 			    		= 
-email.smtpport			    		= 25
+email.host 				            = ${SMTP_HOST}
+email.smtp_auth			    		= true
+email.username			    		=  ${SMTP_USER}
+email.password 			    		= ${SMTP_PASS}
+email.smtpport			    		= ${SMTP_PORT}
 email.secure      		    		= 
 email.ack 				            = false
 
