--- a/simpleinvoices/config/config.ini
+++ b/simpleinvoices/config/config.ini
@@ -31,7 +31,7 @@ email.smtp_auth			    		= true
 email.username			    		=  ${SMTP_USER}
 email.password 			    		= ${SMTP_PASS}
 email.smtpport			    		= ${SMTP_PORT}
-email.secure      		    		= 
+email.secure      		    		= ${SMTP_SECURE}
 email.ack 				            = false
 
 encryption.default.key 				= this_is_the_encryption_key_change_it
