--- a/simpleinvoices/config/config.ini
+++ b/simpleinvoices/config/config.ini
@@ -1,3 +1,4 @@
+;<?`php die(); ?>
 ; Simple Invoices configuration file
 ; - refer http://www.simpleinvoices.org/config for all options
 
@@ -11,7 +12,7 @@ database.params.password 			= ${DB_PASS}
 database.params.dbname   			= ${DB_NAME}
 database.params.port     			= ${DB_PORT}
 
-authentication.enabled	 			= false
+authentication.enabled	 			= ${SI_AUTH}
 authentication.http 				= 
 
 export.spreadsheet	     			= xls
