--- a/simpleinvoices/config/config.ini
+++ b/simpleinvoices/config/config.ini
@@ -12,7 +12,7 @@ database.params.password 			= ${DB_PASS}
 database.params.dbname   			= ${DB_NAME}
 database.params.port     			= ${DB_PORT}
 
-authentication.enabled	 			= ${SI_AUTH}
+authentication.enabled	 			= true
 authentication.http 				= 
 
 export.spreadsheet	     			= xls
