--- a/simpleinvoices/config/config.ini
+++ b/simpleinvoices/config/config.ini
@@ -12,7 +12,7 @@ database.params.password 			= ${DB_PASS}
 database.params.dbname   			= ${DB_NAME}
 database.params.port     			= ${DB_PORT}
 
-authentication.enabled	 			= true
+authentication.enabled	 			= ${SI_AUTH}
 authentication.http 				= 
 
 export.spreadsheet	     			= xls
@@ -29,7 +29,7 @@ local.precision		    			= 2
 
 email.host 				            = ${SMTP_HOST}
 email.smtp_auth			    		= true
-email.username			    		=  ${SMTP_USER}
+email.username			    		= ${SMTP_USER}
 email.password 			    		= ${SMTP_PASS}
 email.smtpport			    		= ${SMTP_PORT}
 email.secure      		    		= ${SMTP_SECURE}
